inicio da visualizacao do pagamento de horas

--- a/ponto/ponto/app/views/pagar/index.html.erb
+++ b/ponto/ponto/app/views/pagar/index.html.erb
@@ -5,7 +5,7 @@
         <div class="panel-heading">
           <h3 class="panel-title">Horas à pagar</h3>
           <div class="pull-right">
-            <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								<i class="glyphicon glyphicon-filter"></i>  							</span>
+            <span id="filtro_tiago" class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								<i class="glyphicon glyphicon-filter"></i>  							</span>
           </div>
         </div>
         <div class="panel-body">
