--- a/ponto/ponto/app/views/funcionarios/index.html.erb
+++ b/ponto/ponto/app/views/funcionarios/index.html.erb
@@ -5,7 +5,7 @@
             <div class="panel-heading">
               <h3 class="panel-title">Funcion&aacute;rios</h3>
               <div class="pull-right">
-                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								
+                <span class="clickable filter" id="teste-tiago" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								
                   <i class="glyphicon glyphicon-filter"></i>  							
                 </span>
               </div>
@@ -128,6 +128,8 @@
 
 
     </div>
+
+<script src="/assets/grid-filtro.js"></script>
 
 <!--
 <h1>Listing funcionarios</h1>
