--- a/ponto/ponto/app/views/inconsistencias/index.html.erb
+++ b/ponto/ponto/app/views/inconsistencias/index.html.erb
@@ -5,8 +5,8 @@
             <div class="panel-heading">
               <h3 class="panel-title">Inconsistências</h3>
               <div class="pull-right">
-                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">  								
-                  <i class="glyphicon glyphicon-filter"></i>  							
+                <span class="clickable filter" data-toggle="tooltip" title="Toggle table filter" data-container="body">                 
+                  <i class="glyphicon glyphicon-filter"></i>                
                 </span>
               </div>
             </div>
@@ -25,30 +25,22 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>#1 Maria das dores</td>
-                  <td>Compras</td>
-                  <td>18/06/2014</td>
-                  <td>[08:00, 12:30, 19:00]</td>
-                  <td>?</td>
+                <% @divergencias.each do |d| %>
+                <% d[1].each do |f| %>
+                <tr class="<%= classe_dia(f, d[0]) %>">
+                  <td><%= "##{f.id} #{f.nome}" %></td>
+                  <td><%= f.setor.descricao %></td>
+                  <td><%= d[0] %></td>
+                  <td><%= batidas_formatado(f,d[0]) %></td>
+                  <td style="<%= saldo_dia(f,d[0]) >= 0 ? 'color:green' : 'color:red' %>"><%= hora_formatada(saldo_dia(f, d[0])) %></td>
                   <td class="coluna_dir">
-                    <a class="btn btn-primary btn-xs" title="Editar" data-toggle="modal">                      
-                      <span class="glyphicon glyphicon glyphicon-pencil"></span>                                      
+                    <a class="btn btn-primary btn-xs" title="Ajustar" data-toggle="modal">                      
+                      <span class="glyphicon glyphicon-pencil"></span>                                      
                     </a>
                   </td>
                 </tr>
-                <tr>
-                  <td>#1 José da Cunha</td>
-                  <td>Vendas</td>
-                  <td>18/06/2014</td>
-                  <td>[08:00, 17:00]</td>
-                  <td style="color:red">-01:00</td>
-                  <td class="coluna_dir">
-                    <a class="btn btn-primary btn-xs" title="Editar" data-toggle="modal">                      
-                      <span class="glyphicon glyphicon glyphicon-pencil"></span>                                      
-                    </a>
-                  </td>
-                </tr>
+                <% end %>
+                <% end %>
               </tbody>
             </table>
           </div>
