--- a/ponto/ponto/app/views/inconsistencias/index.html.erb
+++ b/ponto/ponto/app/views/inconsistencias/index.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
-      <div class="row">
+      <div class="row" style="margin-top:10px">
+        <span class="label label-warning">Fim de Semana</span>
+        <span class="label label-danger">Feriado</span>
+        <span class="label label-info">Férias</span>
+      </div>
+      <div class="row" style="margin-top:10px">
         <div>
           <div class="panel panel-primary">
             <div class="panel-heading">
@@ -11,7 +16,7 @@
               </div>
             </div>
             <div class="panel-body">
-              <input type="text" class="form-control" id="task-table-filter" data-action="filter" data-filters="#task-table" placeholder="Filter Tasks">
+              <input type="text" class="form-control" id="task-table-filter" data-action="filter" data-filters="#task-table" placeholder="Filtrar inconsistências">
             </div>
             <table class="table table-hover" id="task-table">
               <thead>
