--- a/ponto/ponto/app/views/relatorios/bancohoras.html.erb
+++ b/ponto/ponto/app/views/relatorios/bancohoras.html.erb
@@ -11,6 +11,11 @@
   </head>
   <body>
     <div class="container">
+      <div class="row" style="margin-top:10px; margin-bottom:30px">
+        <span class="label label-warning">Fim de Semana</span>
+        <span class="label label-danger">Feriado</span>
+        <span class="label label-info">Férias</span>
+      </div>
       <table class="table table-list-search">
         <thead>
             <tr>
