--- a/ponto/ponto/app/views/usuarios/index.html.erb
+++ b/ponto/ponto/app/views/usuarios/index.html.erb
@@ -12,7 +12,7 @@
               </div>
             </div>
             <div class="panel-body">
-              <input type="text" class="form-control" id="task-table-filter" data-action="filter" data-filters="#task-table" placeholder="Filter Tasks">
+              <input type="text" class="form-control" id="task-table-filter" data-action="filter" data-filters="#task-table" placeholder="Filtrar usuários">
             </div>
             <table class="table table-hover" id="task-table">
               <thead>
