--- a/ponto/ponto/app/views/funcionarios/index.html.erb
+++ b/ponto/ponto/app/views/funcionarios/index.html.erb
@@ -31,7 +31,7 @@
                   <td><%= funcionario.setor ? funcionario.setor.descricao : '--nenhum--' %></td>
                   <td><%= hora_formatada(saldo_total(funcionario, Date.yesterday)) %></td>
                   <td class="coluna_dir">
-                    <a class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas">                      
+                    <a id='<%= funcionario.id %>' class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas" onclick="setFuncionario('#<%= funcionario.id %> <%= funcionario.nome %>')">
                       <span class="glyphicon glyphicon-thumbs-up"></span>                                      
                     </a>
                     <a class="btn btn-primary btn-xs" title="Pagar horas extras" data-toggle="modal" data-target="#horas_extras">
@@ -53,7 +53,7 @@
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="panel-title" id="contactLabel">Abonar horas de: #1 Maria das dores</h4>
+                <h4 class="panel-title" id="funcionarioLabel">Abonar horas de: #1 Maria das dores</h4>
               </div>
               <form action="#" method="post" accept-charset="utf-8">
                 <div class="modal-body" style="padding: 5px;">
