--- a/ponto/ponto/app/views/funcionarios/index.html.erb
+++ b/ponto/ponto/app/views/funcionarios/index.html.erb
@@ -31,7 +31,7 @@
                   <td><%= funcionario.setor ? funcionario.setor.descricao : '--nenhum--' %></td>
                   <td><%= hora_formatada(saldo_total(funcionario, Date.yesterday)) %></td>
                   <td class="coluna_dir">
-                    <a id='<%= funcionario.id %>' class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas" onclick="setFuncionario('#<%= funcionario.id %> <%= funcionario.nome %>')">
+                    <a id='<%= funcionario.id %>' class="btn btn-primary btn-xs" title="Abonar horas" data-toggle="modal" data-target="#abonar_horas" onclick="setFuncionario('<%= funcionario.id %>','<%= funcionario.nome %>')">
                       <span class="glyphicon glyphicon-thumbs-up"></span>                                      
                     </a>
                     <a class="btn btn-primary btn-xs" title="Pagar horas extras" data-toggle="modal" data-target="#horas_extras">
@@ -53,24 +53,46 @@
             <div class="panel panel-primary">
               <div class="panel-heading">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h4 class="panel-title" id="funcionarioLabel">Abonar horas de: #1 Maria das dores</h4>
+                <h4 class="panel-title" id="funcionarioLabel"></h4>
               </div>
-              <form action="#" method="post" accept-charset="utf-8">
+              <form method="post" onsubmit="return abonarHoras()" accept-charset="utf-8">
+                <div id="alert-sucesso" class="alert alert-success fade" style="margin-bottom:0px;display:none">
+                  <strong>Abono de horas realizado com sucesso!</strong>
+                </div>
+                <input type="hidden" id="funcionarioid_abonar" />
                 <div class="modal-body" style="padding: 5px;">
                   <div class="row">
                     <div class="col-sm-5 col-md-5 col-lg-5" style="padding-bottom: 10px;">
                       <div class="form-group">
                         <label class="control-label">Data:</label>
-                        <div class="controls">
-                          <input type="text" class="form-control" required="" autofocus="true">
+                        <div class="input-group date form_date" data-date="" data-date-format="yyyy-mm-dd" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
+                          <input type="text" id="data_abonar" readonly required class="form-control" autofocus="true">
+                          <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
+                        <input type="hidden" id="dtp_input2" value="" /><br/>
                       </div>
                     </div>
+                     <script type="text/javascript">
+                       setTimeout(function(){
+                          $(function() {
+                            $('.form_date').datetimepicker({
+                                  language:  'pt-BR',
+                                  weekStart: 1,
+                                  todayBtn:  1,
+                                  autoclose: 1,
+                                  todayHighlight: 1,
+                                  startView: 2,
+                                  minView: 2,
+                                  forceParse: 0
+                              });
+                          });
+                         },2000);
+                      </script>
                     <div class="col-sm-3 col-md-3 col-lg-3" style="padding-bottom: 10px;">
                       <div class="form-group">
                         <label class="control-label">Horas à abonar:</label>
                         <div class="controls">
-                          <input type="text" class="form-control" required="">
+                          <input type="text" id="horas_abonar" class="form-control" required="">
                         </div>
                       </div>
                     </div>
@@ -78,7 +100,7 @@
                   <div class="row" style="margin-bottom:10px">
                     <div class="col-sm-12 col-md-12 col-lg-12">
                       <label class="form-label">Justificativa:</label>
-                      <textarea class="form-control"></textarea>
+                      <textarea id="justificativa_abonar" class="form-control"></textarea>
                     </div>
                   </div>
                 </div>
@@ -98,11 +120,13 @@
         <div class="modal fade" id="horas_extras" tabindex="-1" role="dialog" aria-labelledby="contactLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="panel panel-primary">
+              
               <div class="panel-heading">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                 <h4 class="panel-title" id="contactLabel">Pagar horas extras à: #1 Maria das dores</h4>
               </div>
               <form action="#" method="post" accept-charset="utf-8">
+                <a class="close" data-dismiss="alert" href="#">&times;</a>
                 <div class="modal-body" style="padding: 5px;">
                   <div class="row">
                     <div class="col-sm-3 col-md-3 col-lg-3" style="padding-bottom: 10px;">
