--- a/ponto/ponto/app/views/batidas/edit.html.erb
+++ b/ponto/ponto/app/views/batidas/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing batida</h1>
+<h2>Editar batida</h2>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @batida %> |
-<%= link_to 'Back', batidas_path %>
