--- a/ponto/ponto/app/views/inconsistencias/show.html.erb
+++ b/ponto/ponto/app/views/inconsistencias/show.html.erb
@@ -1,26 +1,52 @@
-<table>
-  <thead>
-    <tr>
-      <th>Funcionario</th>
-      <th>Data</th>
-      <th>Hora</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @batidas.each do |batida| %>
-      <tr>
-        <td><%= batida.funcionario.nil? ? '' : batida.funcionario.nome %></td>
-        <td><%= batida.data %></td>
-        <td><%= batida.hora %></td>
-        <td><%= link_to 'Alterar', edit_batida_path(batida) %></td>
-        <td><%= link_to 'Excluir', batida, method: :delete, data: { confirm: 'Deseja deletar a batida?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'Nova Batida', new_batida_path %>
+<div class="container">
+  <div class="row" style="margin-top:10px">
+        <%= link_to 'Adicionar Batida', new_batida_path(data: @data, funcionario: @funcionario), class: 'btn btn-primary' %>
+      </div>
+      <div class="row" style="margin-top:10px">
+        <div>
+          <div class="panel panel-primary">
+            <div class="panel-heading">
+              <h3 class="panel-title"><%= "Inconsistência: #{@data} - #{@funcionario.nome}" %></h3>
+              <div class="pull-right">
+                <span class="clickable filter" id="teste-tiago" data-toggle="tooltip" title="Toggle table filter" data-container="body">                  
+                  <i class="glyphicon glyphicon-filter"></i>                
+                </span>
+              </div>
+            </div>
+            <div class="panel-body">
+              <input type="text" class="form-control" id="task-table-filter" data-action="filter" data-filters="#task-table" placeholder="Filter Tasks">
+            </div>
+            <table class="table table-hover" id="task-table">
+              <thead>
+                <tr>
+                  <th>Hora</th>
+                  <th style="text-align:right">Opções</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @batidas.each do |batida| %>
+                <tr>
+                  <td><%= batida.hora.strftime("%H:%M") %></td>
+                  <td class="coluna_dir">
+                    <%= link_to "<span class=\"glyphicon glyphicon-pencil\"></span>".html_safe, 
+                        edit_batida_path(batida), 
+                        class: "btn btn-primary btn-xs" %>
+                    <%= link_to "<span class=\"glyphicon glyphicon-trash\"></span>".html_safe, 
+                        batida_path(batida),
+                        method: :delete,
+                        data: {confirm: 'Deseja excluir?'},
+                        class: "btn btn-danger btn-xs" %>
+                  </td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+      <% if batidas_par?(@funcionario, @data) %>
+      <div class="row" style="margin-top:10px">
+        <%= link_to "Reconhecer divergência", {controller: 'divergencias', funcionario_id: @funcionario.id, data: @data, inconsistencia: true}, data: {confirm: "Deseja reconhecer a divergência?"}, method: :post, class: "btn btn-primary btn-xs" %>
+      </div>
+      <% end %>
+</div>
