--- a/ponto/ponto/app/views/layouts/application.html.erb
+++ b/ponto/ponto/app/views/layouts/application.html.erb
@@ -139,8 +139,8 @@
           <li class="<%= 'active' if params[:controller] == 'inconsistencias' %>">
             <%= link_to 'Inconsistências', inconsistencias_path %>
           </li>
-          <li class="<%= 'active' if params[:controller] == 'pagar' %>">
-            <a href="pagar">Horas à Pagar</a>
+          <li class="disabled">
+            <a href="#">Horas à Pagar</a>
           </li>
           <li class="<%= 'active' if params[:controller] == 'relatorios' %>">
             <%= link_to 'Relatórios', relatorios_path %>
